[FIX] point_of_sale: prevent product name background flip
Current behavior:
When the product name is too long and the language is a right to left
language, the background gradients is flipped.

Steps to reproduce:
- Create a PoS product with a long name in Arabic (عر باب
الحرم المدني الفاخر عليقة باب الحرم ريال شاملا الضريبة)
- Set DB language to Arabic
- Open PoS session
- The background gradient is flipped.

opw-3011393

X-original-commit: 5d55841f580d7d193756218f192b49d5364bf2b0

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -1258,15 +1258,19 @@ td {
     width:100%;
     overflow: hidden;
     text-overflow: ellipsis;
-    background: -webkit-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
-    background:    -moz-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
-    background:     -ms-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
     /* troublesome in latest webkit
     background:         linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
     */
     /*background:#FFF;*/
     padding: 3px;
     padding-top:15px;
+}
+
+/*rtl:ignore*/
+.pos .product .product-name {
+    background: -webkit-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
+    background:    -moz-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
+    background:     -ms-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
 }
 
 
